--- a/src/app/board/board.component.html
+++ b/src/app/board/board.component.html
@@ -1,5 +1,37 @@
 <table>
+  <thead>
+    <th></th>
+    <th>A</th>
+    <th>B</th>
+    <th>C</th>
+    <th>D</th>
+    <th>E</th>
+    <th>F</th>
+    <th>G</th>
+    <th>H</th>
+    <th>I</th>
+    <th>J</th>
+  </thead>
+  <tbody>
     <tr>
+        <td>1</td>
+        <td (click)="onClick()">[ ]</td>
+        <td (click)="onClick()">[ ]</td>
+        <td (click)="onClick()">[ ]</td>
+        <td (click)="onClick()">[ ]</td>
+        <td (click)="onClick()">[ ]</td>
+        <td (click)="onClick()">[ ]</td>
+        <td (click)="onClick()">[ ]</td>
+        <td (click)="onClick()">[ ]</td>
+        <td (click)="onClick()">[ ]</td>
+        <td (click)="onClick()">[ ]</td>
+    </tr>
+    <tr>
+        <td>2</td>
+        <td>[ ]</td>
+        <td>[ ]</td>
+        <td>[ ]</td>
+        <td>[ ]</td>
         <td>[ ]</td>
         <td>[ ]</td>
         <td>[ ]</td>
@@ -8,22 +40,11 @@
         <td>[ ]</td>
     </tr>
     <tr>
+        <td>3</td>
         <td>[ ]</td>
         <td>[ ]</td>
         <td>[ ]</td>
         <td>[ ]</td>
-        <td>[ ]</td>
-        <td>[ ]</td>
-    </tr>
-    <tr>
-        <td>[ ]</td>
-        <td>[ ]</td>
-        <td>[ ]</td>
-        <td>[ ]</td>
-        <td>[ ]</td>
-        <td>[ ]</td>
-    </tr>
-    <tr>
         <td>[ ]</td>
         <td>[ ]</td>
         <td>[ ]</td>
@@ -32,6 +53,11 @@
         <td>[ ]</td>
     </tr>
     <tr>
+        <td>4</td>
+        <td>[ ]</td>
+        <td>[ ]</td>
+        <td>[ ]</td>
+        <td>[ ]</td>
         <td>[ ]</td>
         <td>[ ]</td>
         <td>[ ]</td>
@@ -40,6 +66,11 @@
         <td>[ ]</td>
     </tr>
     <tr>
+        <td>5</td>
+        <td>[ ]</td>
+        <td>[ ]</td>
+        <td>[ ]</td>
+        <td>[ ]</td>
         <td>[ ]</td>
         <td>[ ]</td>
         <td>[ ]</td>
@@ -47,4 +78,70 @@
         <td>[ ]</td>
         <td>[ ]</td>
     </tr>
-  </table>
+    <tr>
+        <td>6</td>
+        <td>[ ]</td>
+        <td>[ ]</td>
+        <td>[ ]</td>
+        <td>[ ]</td>
+        <td>[ ]</td>
+        <td>[ ]</td>
+        <td>[ ]</td>
+        <td>[ ]</td>
+        <td>[ ]</td>
+        <td>[ ]</td>
+    </tr>
+    <tr>
+        <td>7</td>
+        <td>[ ]</td>
+        <td>[ ]</td>
+        <td>[ ]</td>
+        <td>[ ]</td>
+        <td>[ ]</td>
+        <td>[ ]</td>
+        <td>[ ]</td>
+        <td>[ ]</td>
+        <td>[ ]</td>
+        <td>[ ]</td>
+    </tr>
+    <tr>
+        <td>8</td>
+        <td>[ ]</td>
+        <td>[ ]</td>
+        <td>[ ]</td>
+        <td>[ ]</td>
+        <td>[ ]</td>
+        <td>[ ]</td>
+        <td>[ ]</td>
+        <td>[ ]</td>
+        <td>[ ]</td>
+        <td>[ ]</td>
+    </tr>
+    <tr>
+        <td>9</td>
+        <td>[ ]</td>
+        <td>[ ]</td>
+        <td>[ ]</td>
+        <td>[ ]</td>
+        <td>[ ]</td>
+        <td>[ ]</td>
+        <td>[ ]</td>
+        <td>[ ]</td>
+        <td>[ ]</td>
+        <td>[ ]</td>
+    </tr>
+    <tr>
+        <td>10</td>
+        <td>[ ]</td>
+        <td>[ ]</td>
+        <td>[ ]</td>
+        <td>[ ]</td>
+        <td>[ ]</td>
+        <td>[ ]</td>
+        <td>[ ]</td>
+        <td>[ ]</td>
+        <td>[ ]</td>
+        <td>[ ]</td>
+    </tr>
+  </tbody>
+</table>
