--- a/src/app/board/board.component.html
+++ b/src/app/board/board.component.html
@@ -15,133 +15,133 @@
   <tbody>
     <tr>
         <td>1</td>
-        <td (click)="onClick()">[ ]</td>
-        <td (click)="onClick()">[ ]</td>
-        <td (click)="onClick()">[ ]</td>
-        <td (click)="onClick()">[ ]</td>
-        <td (click)="onClick()">[ ]</td>
-        <td (click)="onClick()">[ ]</td>
-        <td (click)="onClick()">[ ]</td>
-        <td (click)="onClick()">[ ]</td>
-        <td (click)="onClick()">[ ]</td>
-        <td (click)="onClick()">[ ]</td>
+        <td (click)="onClick()"> </td>
+        <td (click)="onClick()"> </td>
+        <td (click)="onClick()"> </td>
+        <td (click)="onClick()"> </td>
+        <td (click)="onClick()"> </td>
+        <td (click)="onClick()"> </td>
+        <td (click)="onClick()"> </td>
+        <td (click)="onClick()"> </td>
+        <td (click)="onClick()"> </td>
+        <td (click)="onClick()"> </td>
     </tr>
     <tr>
         <td>2</td>
-        <td>[ ]</td>
-        <td>[ ]</td>
-        <td>[ ]</td>
-        <td>[ ]</td>
-        <td>[ ]</td>
-        <td>[ ]</td>
-        <td>[ ]</td>
-        <td>[ ]</td>
-        <td>[ ]</td>
-        <td>[ ]</td>
+        <td> </td>
+        <td> </td>
+        <td> </td>
+        <td> </td>
+        <td> </td>
+        <td> </td>
+        <td> </td>
+        <td> </td>
+        <td> </td>
+        <td> </td>
     </tr>
     <tr>
         <td>3</td>
-        <td>[ ]</td>
-        <td>[ ]</td>
-        <td>[ ]</td>
-        <td>[ ]</td>
-        <td>[ ]</td>
-        <td>[ ]</td>
-        <td>[ ]</td>
-        <td>[ ]</td>
-        <td>[ ]</td>
-        <td>[ ]</td>
+        <td> </td>
+        <td> </td>
+        <td> </td>
+        <td> </td>
+        <td> </td>
+        <td> </td>
+        <td> </td>
+        <td> </td>
+        <td> </td>
+        <td> </td>
     </tr>
     <tr>
         <td>4</td>
-        <td>[ ]</td>
-        <td>[ ]</td>
-        <td>[ ]</td>
-        <td>[ ]</td>
-        <td>[ ]</td>
-        <td>[ ]</td>
-        <td>[ ]</td>
-        <td>[ ]</td>
-        <td>[ ]</td>
-        <td>[ ]</td>
+        <td> </td>
+        <td> </td>
+        <td> </td>
+        <td> </td>
+        <td> </td>
+        <td> </td>
+        <td> </td>
+        <td> </td>
+        <td> </td>
+        <td> </td>
     </tr>
     <tr>
         <td>5</td>
-        <td>[ ]</td>
-        <td>[ ]</td>
-        <td>[ ]</td>
-        <td>[ ]</td>
-        <td>[ ]</td>
-        <td>[ ]</td>
-        <td>[ ]</td>
-        <td>[ ]</td>
-        <td>[ ]</td>
-        <td>[ ]</td>
+        <td> </td>
+        <td> </td>
+        <td> </td>
+        <td> </td>
+        <td> </td>
+        <td> </td>
+        <td> </td>
+        <td> </td>
+        <td> </td>
+        <td> </td>
     </tr>
     <tr>
         <td>6</td>
-        <td>[ ]</td>
-        <td>[ ]</td>
-        <td>[ ]</td>
-        <td>[ ]</td>
-        <td>[ ]</td>
-        <td>[ ]</td>
-        <td>[ ]</td>
-        <td>[ ]</td>
-        <td>[ ]</td>
-        <td>[ ]</td>
+        <td> </td>
+        <td> </td>
+        <td> </td>
+        <td> </td>
+        <td> </td>
+        <td> </td>
+        <td> </td>
+        <td> </td>
+        <td> </td>
+        <td> </td>
     </tr>
     <tr>
         <td>7</td>
-        <td>[ ]</td>
-        <td>[ ]</td>
-        <td>[ ]</td>
-        <td>[ ]</td>
-        <td>[ ]</td>
-        <td>[ ]</td>
-        <td>[ ]</td>
-        <td>[ ]</td>
-        <td>[ ]</td>
-        <td>[ ]</td>
+        <td> </td>
+        <td> </td>
+        <td> </td>
+        <td> </td>
+        <td> </td>
+        <td> </td>
+        <td> </td>
+        <td> </td>
+        <td> </td>
+        <td> </td>
     </tr>
     <tr>
         <td>8</td>
-        <td>[ ]</td>
-        <td>[ ]</td>
-        <td>[ ]</td>
-        <td>[ ]</td>
-        <td>[ ]</td>
-        <td>[ ]</td>
-        <td>[ ]</td>
-        <td>[ ]</td>
-        <td>[ ]</td>
-        <td>[ ]</td>
+        <td> </td>
+        <td> </td>
+        <td> </td>
+        <td> </td>
+        <td> </td>
+        <td> </td>
+        <td> </td>
+        <td> </td>
+        <td> </td>
+        <td> </td>
     </tr>
     <tr>
         <td>9</td>
-        <td>[ ]</td>
-        <td>[ ]</td>
-        <td>[ ]</td>
-        <td>[ ]</td>
-        <td>[ ]</td>
-        <td>[ ]</td>
-        <td>[ ]</td>
-        <td>[ ]</td>
-        <td>[ ]</td>
-        <td>[ ]</td>
+        <td> </td>
+        <td> </td>
+        <td> </td>
+        <td> </td>
+        <td> </td>
+        <td> </td>
+        <td> </td>
+        <td> </td>
+        <td> </td>
+        <td> </td>
     </tr>
     <tr>
         <td>10</td>
-        <td>[ ]</td>
-        <td>[ ]</td>
-        <td>[ ]</td>
-        <td>[ ]</td>
-        <td>[ ]</td>
-        <td>[ ]</td>
-        <td>[ ]</td>
-        <td>[ ]</td>
-        <td>[ ]</td>
-        <td>[ ]</td>
+        <td> </td>
+        <td> </td>
+        <td> </td>
+        <td> </td>
+        <td> </td>
+        <td> </td>
+        <td> </td>
+        <td> </td>
+        <td> </td>
+        <td> </td>
     </tr>
   </tbody>
 </table>
