redesign board component to use ngFor directive to create a binding between the component view and class

--- a/src/app/board/board.component.css
+++ b/src/app/board/board.component.css
@@ -1,7 +1,7 @@
-table, th, td{
-    border: 1px solid black;
+div {
+    float: left;
 }
-td:hover {
+div:hover {
    cursor: pointer;
    background-color: lightgray 
 }
