--- a/src/app/board/board.component.html
+++ b/src/app/board/board.component.html
@@ -1,147 +1,6 @@
-<table>
-  <thead>
-    <th></th>
-    <th>A</th>
-    <th>B</th>
-    <th>C</th>
-    <th>D</th>
-    <th>E</th>
-    <th>F</th>
-    <th>G</th>
-    <th>H</th>
-    <th>I</th>
-    <th>J</th>
-  </thead>
-  <tbody>
-    <tr>
-        <td>1</td>
-        <td (click)="onClick()"> </td>
-        <td (click)="onClick()"> </td>
-        <td (click)="onClick()"> </td>
-        <td (click)="onClick()"> </td>
-        <td (click)="onClick()"> </td>
-        <td (click)="onClick()"> </td>
-        <td (click)="onClick()"> </td>
-        <td (click)="onClick()"> </td>
-        <td (click)="onClick()"> </td>
-        <td (click)="onClick()"> </td>
-    </tr>
-    <tr>
-        <td>2</td>
-        <td (click)="onClick()"> </td>
-        <td (click)="onClick()"> </td>
-        <td (click)="onClick()"> </td>
-        <td (click)="onClick()"> </td>
-        <td (click)="onClick()"> </td>
-        <td (click)="onClick()"> </td>
-        <td (click)="onClick()"> </td>
-        <td (click)="onClick()"> </td>
-        <td (click)="onClick()"> </td>
-        <td (click)="onClick()"> </td>
-    </tr>
-    <tr>
-        <td>3</td>
-        <td (click)="onClick()"> </td>
-        <td (click)="onClick()"> </td>
-        <td (click)="onClick()"> </td>
-        <td (click)="onClick()"> </td>
-        <td (click)="onClick()"> </td>
-        <td (click)="onClick()"> </td>
-        <td (click)="onClick()"> </td>
-        <td (click)="onClick()"> </td>
-        <td (click)="onClick()"> </td>
-        <td (click)="onClick()"> </td>
-    </tr>
-    <tr>
-        <td>4</td>
-        <td (click)="onClick()"> </td>
-        <td (click)="onClick()"> </td>
-        <td (click)="onClick()"> </td>
-        <td (click)="onClick()"> </td>
-        <td (click)="onClick()"> </td>
-        <td (click)="onClick()"> </td>
-        <td (click)="onClick()"> </td>
-        <td (click)="onClick()"> </td>
-        <td (click)="onClick()"> </td>
-        <td (click)="onClick()"> </td>
-    </tr>
-    <tr>
-        <td>5</td>
-        <td (click)="onClick()"> </td>
-        <td (click)="onClick()"> </td>
-        <td (click)="onClick()"> </td>
-        <td (click)="onClick()"> </td>
-        <td (click)="onClick()"> </td>
-        <td (click)="onClick()"> </td>
-        <td (click)="onClick()"> </td>
-        <td (click)="onClick()"> </td>
-        <td (click)="onClick()"> </td>
-        <td (click)="onClick()"> </td>
-    </tr>
-    <tr>
-        <td>6</td>
-        <td (click)="onClick()"> </td>
-        <td (click)="onClick()"> </td>
-        <td (click)="onClick()"> </td>
-        <td (click)="onClick()"> </td>
-        <td (click)="onClick()"> </td>
-        <td (click)="onClick()"> </td>
-        <td (click)="onClick()"> </td>
-        <td (click)="onClick()"> </td>
-        <td (click)="onClick()"> </td>
-        <td (click)="onClick()"> </td>
-    </tr>
-    <tr>
-        <td>7</td>
-        <td (click)="onClick()"> </td>
-        <td (click)="onClick()"> </td>
-        <td (click)="onClick()"> </td>
-        <td (click)="onClick()"> </td>
-        <td (click)="onClick()"> </td>
-        <td (click)="onClick()"> </td>
-        <td (click)="onClick()"> </td>
-        <td (click)="onClick()"> </td>
-        <td (click)="onClick()"> </td>
-        <td (click)="onClick()"> </td>
-    </tr>
-    <tr>
-        <td>8</td>
-        <td (click)="onClick()"> </td>
-        <td (click)="onClick()"> </td>
-        <td (click)="onClick()"> </td>
-        <td (click)="onClick()"> </td>
-        <td (click)="onClick()"> </td>
-        <td (click)="onClick()"> </td>
-        <td (click)="onClick()"> </td>
-        <td (click)="onClick()"> </td>
-        <td (click)="onClick()"> </td>
-        <td (click)="onClick()"> </td>
-    </tr>
-    <tr>
-        <td>9</td>
-        <td (click)="onClick()"> </td>
-        <td (click)="onClick()"> </td>
-        <td (click)="onClick()"> </td>
-        <td (click)="onClick()"> </td>
-        <td (click)="onClick()"> </td>
-        <td (click)="onClick()"> </td>
-        <td (click)="onClick()"> </td>
-        <td (click)="onClick()"> </td>
-        <td (click)="onClick()"> </td>
-        <td (click)="onClick()"> </td>
-    </tr>
-    <tr>
-        <td>10</td>
-        <td (click)="onClick()"> </td>
-        <td (click)="onClick()"> </td>
-        <td (click)="onClick()"> </td>
-        <td (click)="onClick()"> </td>
-        <td (click)="onClick()"> </td>
-        <td (click)="onClick()"> </td>
-        <td (click)="onClick()"> </td>
-        <td (click)="onClick()"> </td>
-        <td (click)="onClick()"> </td>
-        <td (click)="onClick()"> </td>
-    </tr>
-  </tbody>
-</table>
+<div *ngFor="let cell of gameboard"
+    [class.shown]="cell.isChecked"
+    (click)="onClick(cell)">
+    <span *ngIf="cell.isChecked">[{{cell.value}}] </span>
+    <span *ngIf="!cell.isChecked">[  ]</span>
+</div>
