implement a message service used to deliver messages to the users.

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,8 +1,9 @@
 <div style="text-align:center">
-  <h1>Battleship</h1>
+  <h1>BattleShipt</h1>
 </div>
   <h2>Player 1</h2>
   <app-board></app-board>
   <h2>Player 2</h2>
   <app-board></app-board>
+  <app-messages></app-messages>
 
