--- a/src/app/messages/messages.component.html
+++ b/src/app/messages/messages.component.html
@@ -1,4 +1,4 @@
-<div *ngIf="messageService.messages.length">
+<div *ngIf="messageService.messages.length" class="messageList">
   <h2>Messages</h2>
   <div *ngFor='let message of messageService.messages'> {{message}} </div>
 </div>
