move player name into board component

--- a/src/app/board/board.component.html
+++ b/src/app/board/board.component.html
@@ -1,4 +1,5 @@
 <div class="column">
+    <h2>Player Name</h2>
     <div *ngFor="let cell of gameboard"
         class="gameSquare"
         (click)="onClick(cell)">
