create a parent component to hold the players game boards

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,7 +1,3 @@
-<div style="text-align:center">
-  <h1>BattleShipt</h1>
-</div>
-  <app-board></app-board>
-  <app-board></app-board>
+  <app-game></app-game>
   <app-messages></app-messages>
 
