--- a/src/app/board/board.component.css
+++ b/src/app/board/board.component.css
@@ -1,13 +1,27 @@
 .column {
     float: left;
-    width: 50%;
+    width: 48%;
+    padding: 10px 10px;
 }
 .gameSquare {
     float: left;
     width: 10%;
     column-count: 10;
+    text-align: center;
+}
+.highlight {
+    background-color: yellow;
 }
 .gameSquare:hover {
    cursor: pointer;
    background-color: lightgray 
+}
+
+.disabled:hover {
+    cursor: not-allowed;
+    background-color: transparent;
+}
+
+.shipList {
+    padding: 10px 10px;
 }
