--- a/src/app/board/board.component.html
+++ b/src/app/board/board.component.html
@@ -7,9 +7,9 @@
     </div>
     <div *ngFor="let cell of gameService.player1Gameboard.grid"
         class="gameSquare"
-        [class.disabled]="gameService.turn != 0"
-        [class.highlight]="cell.highlight"
-        (click)="gameService.turn === 0 && !gameService.isSetup ? playerFire(cell) : null"
+        [class.disabled]="(gameService.turn != 0 && gameService.isSetup) || (gameService.turn === 0 && !gameService.isSetup)"
+        [class.highlight]="cell.highlight && gameService.isSetup && gameService.turn == 0"
+        (click)="gameService.turn === 1 && !gameService.isSetup ? playerFire(cell) : null"
         (click)="gameService.turn === 0 && gameService.isSetup ? placeShip(cell) : null">
         <span *ngIf="cell.isChecked || (gameService.turn == 0 && gameService.isSetup)">[{{cell.value}}] </span>
         <span *ngIf="!cell.isChecked && !gameService.isSetup || (gameService.isSetup && gameService.turn != 0)">[  ]</span>
@@ -26,8 +26,9 @@
         </div>
         <div *ngFor="let cell of gameService.player2Gameboard.grid"
             class="gameSquare"
-            [class.disabled]="gameService.turn != 1"
-            (click)="gameService.turn === 1 && !gameService.isSetup ? playerFire(cell) : null"
+            [class.disabled]="(gameService.turn != 1 && gameService.isSetup) || (gameService.turn === 1 && !gameService.isSetup)"
+            [class.highlight]="cell.highlight && gameService.isSetup && gameService.turn == 1"            
+            (click)="gameService.turn === 0 && !gameService.isSetup ? playerFire(cell) : null"
             (click)="gameService.turn === 1 && gameService.isSetup ? placeShip(cell) : null">
             <span *ngIf="cell.isChecked || (gameService.turn == 1 && gameService.isSetup)">[{{cell.value}}] </span>
             <span *ngIf="!cell.isChecked && !gameService.isSetup || (gameService.isSetup && gameService.turn != 1)">[  ]</span>
