--- a/src/app/board/board.component.html
+++ b/src/app/board/board.component.html
@@ -4,15 +4,16 @@
 <div class="column">
     <div>
         <input [(ngModel)]="player1Name" placeholder="name"/>
+        <button *ngIf="gameService.turn === 0 && gameService.isSetup && !this.gameService.startPlacement" (click)="cancelPlacement()">Cancel</button>
     </div>
     <div *ngFor="let cell of gameService.player1Gameboard.grid"
         class="gameSquare"
-        [class.disabled]="(gameService.turn != 0 && gameService.isSetup) || (gameService.turn === 0 && !gameService.isSetup)"
+        [class.disabled]="(gameService.turn != 0 && gameService.isSetup) || (gameService.turn === 0 && !gameService.isSetup) || gameService.gameEnded"
         [class.highlight]="cell.highlight && gameService.isSetup && gameService.turn == 0"
         (click)="gameService.turn === 1 && !gameService.isSetup ? playerFire(cell) : null"
         (click)="gameService.turn === 0 && gameService.isSetup ? placeShip(cell) : null">
-        <span *ngIf="cell.isChecked || (gameService.turn == 0 && gameService.isSetup)">[{{cell.value}}] </span>
-        <span *ngIf="!cell.isChecked && !gameService.isSetup || (gameService.isSetup && gameService.turn != 0)">[  ]</span>
+        <span *ngIf="cell.isChecked || gameService.gameEnded || (gameService.turn == 0 && gameService.isSetup)">[{{cell.value}}] </span>
+        <span *ngIf="!gameService.gameEnded && !cell.isChecked && !gameService.isSetup || (gameService.isSetup && gameService.turn != 0)">[  ]</span>
     </div>
     <div class="shipList">
         <div *ngFor="let ship of gameService.player1Ships">
@@ -23,15 +24,17 @@
 <div class="column">
         <div>
             <input [(ngModel)]="player2Name" placeholder="name"/>
+            <button *ngIf="gameService.turn === 1 && gameService.isSetup && !this.gameService.startPlacement" (click)="cancelPlacement()">Cancel</button>
+            
         </div>
         <div *ngFor="let cell of gameService.player2Gameboard.grid"
             class="gameSquare"
-            [class.disabled]="(gameService.turn != 1 && gameService.isSetup) || (gameService.turn === 1 && !gameService.isSetup)"
+            [class.disabled]="(gameService.turn != 1 && gameService.isSetup) || (gameService.turn === 1 && !gameService.isSetup) || gameService.gameEnded"
             [class.highlight]="cell.highlight && gameService.isSetup && gameService.turn == 1"            
             (click)="gameService.turn === 0 && !gameService.isSetup ? playerFire(cell) : null"
             (click)="gameService.turn === 1 && gameService.isSetup ? placeShip(cell) : null">
-            <span *ngIf="cell.isChecked || (gameService.turn == 1 && gameService.isSetup)">[{{cell.value}}] </span>
-            <span *ngIf="!cell.isChecked && !gameService.isSetup || (gameService.isSetup && gameService.turn != 1)">[  ]</span>
+            <span *ngIf="cell.isChecked || gameService.gameEnded || (gameService.turn == 1 && gameService.isSetup)">[{{cell.value}}] </span>
+            <span *ngIf="!gameService.gameEnded && !cell.isChecked && !gameService.isSetup || (gameService.isSetup && gameService.turn != 1)">[  ]</span>
             </div>
         <div class="shipList">
             <div *ngFor="let ship of gameService.player2Ships">
