--- a/src/app/board/board.component.css
+++ b/src/app/board/board.component.css
@@ -1,27 +1,47 @@
 .column {
     float: left;
+    display: block;
     width: 48%;
-    padding: 10px 10px;
+    padding: 5px 5px;
 }
 .gameSquare {
-    float: left;
-    width: 10%;
+    background-color: #1AE2FF;
+    border: 1px solid black;
     column-count: 10;
-    text-align: center;
+    display: block;
+    float: left;
+    height: 25px;
+    max-height: 25px;
+    width: 9%;
 }
+
+.gameSquare span {
+    display: inline-block;
+    margin: 2px 20px;
+    text-align: center;
+    width: 49%;
+}
+
 .highlight {
     background-color: yellow;
 }
 .gameSquare:hover {
    cursor: pointer;
-   background-color: lightgray 
+   background-color: rgba(211, 211, 211, 0.774);
+   text-align: center;
 }
 
 .disabled:hover {
     cursor: not-allowed;
-    background-color: transparent;
 }
 
 .shipList {
-    padding: 10px 10px;
+    float: left;
+    display: block;
+    margin: 10px 10px;
+    padding: 5px 5px;
+    border: 1px solid black;
+    height: 100px;
+    max-height: 100px;
+    width: 50%;
 }
