--- a/src/app/board/board.component.html
+++ b/src/app/board/board.component.html
@@ -3,7 +3,7 @@
 </div>
 <div class="column">
     <div>
-        <input [(ngModel)]="player1Name" placeholder="name"/>
+        <span>Player 1</span>
         <button *ngIf="gameService.turn === 0 && gameService.isSetup && !this.gameService.startPlacement" (click)="cancelPlacement()">Cancel</button>
     </div>
     <div *ngFor="let cell of gameService.player1Gameboard.grid"
@@ -12,8 +12,8 @@
         [class.highlight]="cell.highlight && gameService.isSetup && gameService.turn == 0"
         (click)="gameService.turn === 1 && !gameService.isSetup ? playerFire(cell) : null"
         (click)="gameService.turn === 0 && gameService.isSetup ? placeShip(cell) : null">
-        <span *ngIf="cell.isChecked || gameService.gameEnded || (gameService.turn == 0 && gameService.isSetup)">[{{cell.value}}] </span>
-        <span *ngIf="!gameService.gameEnded && !cell.isChecked && !gameService.isSetup || (gameService.isSetup && gameService.turn != 0)">[  ]</span>
+        <span *ngIf="cell.isChecked || gameService.gameEnded || (gameService.turn == 0 && gameService.isSetup)">{{cell.value}}</span>
+        <span *ngIf="!gameService.gameEnded && !cell.isChecked && !gameService.isSetup || (gameService.isSetup && gameService.turn != 0)"></span>
     </div>
     <div class="shipList">
         <div *ngFor="let ship of gameService.player1Ships">
@@ -23,7 +23,7 @@
 </div>
 <div class="column">
         <div>
-            <input [(ngModel)]="player2Name" placeholder="name"/>
+            <span>Player 2</span>
             <button *ngIf="gameService.turn === 1 && gameService.isSetup && !this.gameService.startPlacement" (click)="cancelPlacement()">Cancel</button>
             
         </div>
@@ -33,8 +33,8 @@
             [class.highlight]="cell.highlight && gameService.isSetup && gameService.turn == 1"            
             (click)="gameService.turn === 0 && !gameService.isSetup ? playerFire(cell) : null"
             (click)="gameService.turn === 1 && gameService.isSetup ? placeShip(cell) : null">
-            <span *ngIf="cell.isChecked || gameService.gameEnded || (gameService.turn == 1 && gameService.isSetup)">[{{cell.value}}] </span>
-            <span *ngIf="!gameService.gameEnded && !cell.isChecked && !gameService.isSetup || (gameService.isSetup && gameService.turn != 1)">[  ]</span>
+            <span *ngIf="cell.isChecked || gameService.gameEnded || (gameService.turn == 1 && gameService.isSetup)">{{cell.value}}</span>
+            <span *ngIf="!gameService.gameEnded && !cell.isChecked && !gameService.isSetup || (gameService.isSetup && gameService.turn != 1)"></span>
             </div>
         <div class="shipList">
             <div *ngFor="let ship of gameService.player2Ships">
